# libnfc-nci-test

./: .gitignore  CMakeLists.txt  README.md  flake.nix
src/: CMakeLists.txt  MyClass.cpp  MyClass.h  main.cpp
